--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -258,12 +258,20 @@ jobs:
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
       - name: Run unit tests
+        id: test_run
         timeout-minutes: 15
-        run: make unit-test-coverage
+        run: |
+          trap 'echo "exit_code=$?" >> "$GITHUB_OUTPUT"' EXIT
+          make unit-test-coverage
         env:
           UNIT_TEST_DIRS: ${{ inputs.unit_test_directory }}
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
           TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
+
+      - name: Highlight test timeout
+        if: ${{ steps.test_run.outcome == 'failure' && steps.test_run.outputs.exit_code == 124 }}
+        run: |
+          echo "::error::Test Test timed out"
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -341,8 +349,16 @@ jobs:
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
       - name: Run integration test
+        id: test_run
         timeout-minutes: 15
-        run: make integration-test-coverage
+        run: |
+          trap 'echo "exit_code=$?" >> "$GITHUB_OUTPUT"' EXIT
+          make integration-test-coverage
+
+      - name: Highlight test timeout
+        if: ${{ steps.test_run.outcome == 'failure' && steps.test_run.outputs.exit_code == 124 }}
+        run: |
+          echo "::error::Test Test timed out"
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -488,11 +504,19 @@ jobs:
           echo "JOB_ID=${job_id:-unknown}" >> "$GITHUB_OUTPUT"
 
       - name: Run functional test
+        id: test_run
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        run: make functional-test-coverage
+        run: |
+          trap 'echo "exit_code=$?" >> "$GITHUB_OUTPUT"' EXIT
+          make functional-test-coverage
         env:
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+
+      - name: Highlight test timeout
+        if: ${{ steps.test_run.outcome == 'failure' && steps.test_run.outputs.exit_code == 124 }}
+        run: |
+          echo "::error::Test Test timed out"
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -615,18 +639,16 @@ jobs:
           echo "JOB_ID=${job_id-unknown}" >> "$GITHUB_OUTPUT"
 
       - name: Run functional test xdc
+        id: test_run
         timeout-minutes: 25   # update this to TEST_TIMEOUT+5 if you update the Makefile
-        run: make functional-test-xdc-coverage
+        run: |
+          trap 'echo "exit_code=$?" >> "$GITHUB_OUTPUT"' EXIT
+          make functional-test-xdc-coverage
 
-      - name: Generate test summary
-        uses: mikepenz/action-junit-report@v5.0.0-rc01
-        if: failure()
-        with:
-          report_paths: ./.testoutput/*.junit.xml
-          detailed_summary: true
-          check_annotations: false
-          annotate_only: true
-          skip_annotations: true
+      - name: Highlight test timeout
+        if: ${{ steps.test_run.outcome == 'failure' && steps.test_run.outputs.exit_code == 124 }}
+        run: |
+          echo "::error::Test Test timed out"
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
@@ -740,8 +762,16 @@ jobs:
           echo "JOB_ID=${job_id:-unknown}" >> "$GITHUB_OUTPUT"
 
       - name: Run functional test ndc
+        id: test_run
         timeout-minutes: 15
-        run: make functional-test-ndc-coverage
+        run: |
+          trap 'echo "exit_code=$?" >> "$GITHUB_OUTPUT"' EXIT
+          make functional-test-ndc-coverage
+
+      - name: Highlight test timeout
+        if: ${{ steps.test_run.outcome == 'failure' && steps.test_run.outputs.exit_code == 124 }}
+        run: |
+          echo "::error::Test Test timed out"
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
