--- a/.github/workflows/features-integration.yml
+++ b/.github/workflows/features-integration.yml
@@ -14,7 +14,7 @@ concurrency: # Auto-cancel existing runs in the PR when a new commit is pushed
 
 jobs:
   build-docker-image:
-    uses: temporalio/docker-builds/.github/workflows/docker-build-only.yml@main
+    uses: temporalio/docker-builds/.github/workflows/docker-build-only.yml@publish-branch-tag
     with:
       temporal-server-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       temporal-server-repo-ref: ${{github.event.pull_request.head.ref}}
