--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,8 +6,9 @@ on:
   push:
     branches:
       - main
-      - release/**
-      - cloud/**
+      - cloud/*
+      - feature/*
+      - release/*
 
   workflow_dispatch:
     inputs:
