--- a/.github/workflows/trigger-publish.yml
+++ b/.github/workflows/trigger-publish.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - main
-      - release/*
       - cloud/*
+      - feature/*
+      - release/*
 
 jobs:
   trigger:
