--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -83,10 +83,14 @@ jobs:
       modified_functional_test_suites: ${{ env.modified_functional_test_suites }}
       modified_functional_ndc_test_suites: ${{ env.modified_functional_ndc_test_suites }}
       modified_functional_xdc_test_suites: ${{ env.modified_functional_xdc_test_suites }}
+      # Database matrix optimization outputs
+      db_matrix: ${{ steps.compute_matrix.outputs.db_matrix }}
+      secondary_db_matrix: ${{ steps.compute_matrix.outputs.secondary_db_matrix }}
+      run_secondary_subset: ${{ steps.compute_matrix.outputs.run_secondary_subset }}
     steps:
       - id: generate_output
         run: |
-          shards=3
+          shards=5
           timeout=35   # update this to TEST_TIMEOUT if you update the Makefile
           runs_on='["ubuntu-latest"]'
           if [[ "${{ inputs.run_single_functional_test }}" == "true" || "${{ inputs.run_single_unit_test }}" == "true" ]]; then
@@ -136,6 +140,45 @@ jobs:
             -s "${MERGE_BASE}" \
             -t "${COMMIT}" | tee -a "$GITHUB_ENV"
         shell: bash
+
+      - name: Compute database matrix
+        id: compute_matrix
+        run: |
+          # Database configurations
+          ALL_DBS='["cass_es","cass_es8","cass_os2","cass_os3","sqlite","mysql8","postgres12","postgres12_pgx"]'
+          PRIMARY_DBS='["sqlite","cass_es"]'
+          SECONDARY_DBS='["cass_es8","cass_os2","cass_os3","mysql8","postgres12","postgres12_pgx"]'
+
+          # Determine if we should run all databases
+          RUN_ALL="false"
+
+          # Push events (main, release branches) run all DBs
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            echo "Push event - running all database configurations"
+            RUN_ALL="true"
+          # Fork PRs run all DBs (external contributors)
+          elif [[ "${{ github.event.pull_request.head.repo.fork }}" == "true" ]]; then
+            echo "Fork PR - running all database configurations"
+            RUN_ALL="true"
+          # Check for test-all-dbs label
+          elif echo '${{ toJson(github.event.pull_request.labels.*.name) }}' | jq -e 'any(. == "test-all-dbs")' > /dev/null 2>&1; then
+            echo "test-all-dbs label - running all database configurations"
+            RUN_ALL="true"
+          # Check for persistence code changes
+          elif [[ -n "${MERGE_BASE:-}" ]] && git diff --name-only "$MERGE_BASE" "$COMMIT" | grep -qE "^(common/persistence/|schema/)"; then
+            echo "Persistence code changes - running all database configurations"
+            RUN_ALL="true"
+          fi
+
+          if [[ "$RUN_ALL" == "true" ]]; then
+            echo "db_matrix=$ALL_DBS" >> "$GITHUB_OUTPUT"
+            echo "run_secondary_subset=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "Optimized PR - primary DBs only, smoke tests for secondary"
+            echo "db_matrix=$PRIMARY_DBS" >> "$GITHUB_OUTPUT"
+            echo "secondary_db_matrix=$SECONDARY_DBS" >> "$GITHUB_OUTPUT"
+            echo "run_secondary_subset=true" >> "$GITHUB_OUTPUT"
+          fi
 
   pre-build:
     name: Pre-build for cache
@@ -427,15 +470,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        name:
-          - cass_es
-          - cass_es8
-          - cass_os2
-          - cass_os3
-          - sqlite
-          - mysql8
-          - postgres12
-          - postgres12_pgx
+        # Use dynamic database matrix: primary DBs for optimized PR runs, all DBs otherwise
+        name: ${{ fromJson(needs.set-up-single-test.outputs.db_matrix) }}
         shard_index: ${{ fromJson(needs.set-up-single-test.outputs.shard_indices) }}
         runs-on: ${{ fromJson(needs.set-up-single-test.outputs.runs_on) }}
         include:
@@ -595,38 +631,21 @@ jobs:
           FAILED_TEST_RETRIES: "0" # not retrying failed tests intentionally here since we're trying to detect flakes
           TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
 
-  # XDC matrix job. Include `${{ matrix.name }}` in the display name so each
-  # matrix variant has a unique name for the job-id lookup.
-  functional-test-xdc:
-    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
-    # Display name shown in the UI. The job-id lookup uses this exact value.
-    name: Functional test xdc (${{ matrix.name }})
+  # Smoke tests for secondary databases on optimized PR runs
+  # Runs a small subset of tests to verify basic functionality on non-primary databases
+  functional-test-smoke:
+    if: ${{ needs.set-up-single-test.outputs.run_secondary_subset == 'true' && inputs.run_single_unit_test != true && inputs.run_single_functional_test != true }}
+    name: Functional smoke (${{ matrix.name }})
     needs: [pre-build, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
-        name:
-          - cass_es
-          - cass_es8
-          - cass_os2
-          - cass_os3
-          - mysql8
-          - postgres12
-          - postgres12_pgx
+        name: ${{ fromJson(needs.set-up-single-test.outputs.secondary_db_matrix) }}
         include:
-          - name: cass_es
-            persistence_type: nosql
-            persistence_driver: elasticsearch
-            parallel_flags: ""
-            containers: [cassandra, elasticsearch]
-            # Cassandra tests need a larger instance
-            runs_on_override: ubuntu-latest-8-cores
           - name: cass_es8
             persistence_type: nosql
-            persistence_driver: elasticsearch
-            parallel_flags: ""
+            persistence_driver: cassandra
             containers: [cassandra, elasticsearch8]
-            # Cassandra tests need a larger instance
             runs_on_override: ubuntu-latest-8-cores
           - name: cass_os2
             persistence_type: nosql
@@ -639,38 +658,34 @@ jobs:
           - name: mysql8
             persistence_type: sql
             persistence_driver: mysql8
-            parallel_flags: ""
             containers: [mysql]
           - name: postgres12
             persistence_type: sql
             persistence_driver: postgres12
-            parallel_flags: "-parallel=2" # reduce parallelism for postgres
             containers: [postgresql]
           - name: postgres12_pgx
             persistence_type: sql
             persistence_driver: postgres12_pgx
-            parallel_flags: "-parallel=2" # reduce parallelism for postgres
             containers: [postgresql]
     runs-on: ${{ matrix.runs_on_override || 'ubuntu-latest' }}
     env:
+      TEST_TOTAL_SHARDS: 1
+      TEST_SHARD_INDEX: 0
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      TEST_PARALLEL_FLAGS: ${{ matrix.parallel_flags }}
+      TEST_TIMEOUT: 20m
     steps:
+      - uses: ScribeMD/docker-cache@0.3.7
+        with:
+          key: docker-${{ runner.os }}${{ runner.arch }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
+
       - uses: actions/checkout@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
-      # Resolve the numeric job ID for this job instance.
-      # IMPORTANT: `job_name` must exactly match the job's display name above.
-      - name: Get job ID
-        id: get_job_id
-        uses: ./.github/actions/get-job-id
-        with:
-          job_name: Functional test xdc (${{ matrix.name }})
-          run_id: ${{ github.run_id }}
 
       - name: Start containerized dependencies
+        if: ${{ toJson(matrix.containers) != '[]' }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -680,7 +695,7 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version-file: "go.mod"
-          cache: false # do our own caching
+          cache: false
 
       - name: Restore dependencies
         uses: actions/cache/restore@v4
@@ -694,20 +709,12 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
-      - name: Run functional test xdc
-        timeout-minutes: 35 # update this to TEST_TIMEOUT+5 if you update the Makefile
-        run: ./develop/github/monitor_test.sh make functional-test-xdc-coverage
-
-      - name: Print memory snapshot
-        if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
-
-      - name: Generate crash report
-        if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
-          [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
-            CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
+      - name: Run smoke tests
+        timeout-minutes: 25
+        run: make functional-test-coverage
+        env:
+          # Run core workflow tests that exercise basic persistence operations
+          TEST_ARGS: "-run=TestFunctionalSuite/TestStartWorkflow|TestFunctionalSuite/TestSignalWorkflow|TestFunctionalSuite/TestQueryWorkflow|TestActivityTestSuite/TestActivityHeartbeat"
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -719,190 +726,14 @@ jobs:
           annotate_only: true
           skip_annotations: true
 
-      - name: Upload code coverage to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./.testoutput
-          flags: functional-test-xdc
-
-      - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./.testoutput
-          flags: functional-test-xdc
-          report_type: test_results
-
       - name: Upload test results to GitHub
-        # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
         if: ${{ !cancelled() }}
         with:
-          name: junit-xml--${{github.run_id}}--${{ steps.get_job_id.outputs.job_id }}--${{github.run_attempt}}--${{matrix.name}}--functional-test-xdc
-          path: ./.testoutput
-          include-hidden-files: true
-          retention-days: 28
-
-      # Ensure this doesn't contribute to the junit output.
-      - name: Flaky Functional XDC Test Detection
-        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 60
-        run: |
-          echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
-          make functional-test-xdc-coverage
-        env:
-          FAILED_TEST_RETRIES: "0" # not retrying failed tests intentionally here since we're trying to detect flakes
-          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
-
-  # NDC matrix job. Include `${{ matrix.name }}` in the display name so each
-  # matrix variant has a unique name for the job-id lookup.
-  functional-test-ndc:
-    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
-    # Display name shown in the UI. The job-id lookup uses this exact value.
-    name: Functional test ndc (${{ matrix.name }})
-    needs: [pre-build, set-up-single-test]
-    strategy:
-      fail-fast: false
-      matrix:
-        name:
-          - cass_es
-          - cass_es8
-          - cass_os2
-          - cass_os3
-          - mysql8
-          - postgres12
-          - postgres12_pgx
-        include:
-          - name: cass_es
-            persistence_type: nosql
-            persistence_driver: elasticsearch
-            containers: [cassandra, elasticsearch]
-            es_version: v7
-            # Cassandra tests need a larger instance
-            runs_on_override: ubuntu-latest-8-cores
-          - name: cass_es8
-            persistence_type: nosql
-            persistence_driver: elasticsearch
-            containers: [cassandra, elasticsearch8]
-            es_version: v8
-            # Cassandra tests need a larger instance
-            runs_on_override: ubuntu-latest-8-cores
-          - name: cass_os2
-            persistence_type: nosql
-            persistence_driver: cassandra
-            containers: [cassandra, opensearch2]
-          - name: cass_os3
-            persistence_type: nosql
-            persistence_driver: cassandra
-            containers: [cassandra, opensearch3]
-          - name: mysql8
-            persistence_type: sql
-            persistence_driver: mysql8
-            containers: [mysql]
-          - name: postgres12
-            persistence_type: sql
-            persistence_driver: postgres12
-            containers: [postgresql]
-          - name: postgres12_pgx
-            persistence_type: sql
-            persistence_driver: postgres12_pgx
-            containers: [postgresql]
-    runs-on: ${{ matrix.runs_on_override || 'ubuntu-latest' }}
-    env:
-      PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
-      PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      ES_VERSION: ${{ matrix.es_version }}
-    steps:
-      - uses: actions/checkout@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ env.COMMIT }}
-      # Resolve the numeric job ID for this job instance.
-      # IMPORTANT: `job_name` must exactly match the job's display name above.
-      - name: Get job ID
-        id: get_job_id
-        uses: ./.github/actions/get-job-id
-        with:
-          job_name: Functional test ndc (${{ matrix.name }})
-          run_id: ${{ github.run_id }}
-
-      - name: Start containerized dependencies
-        uses: hoverkraft-tech/compose-action@v2.0.1
-        with:
-          compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
-          services: "${{ join(matrix.containers, '\n') }}"
-          down-flags: -v
-
-      - uses: actions/setup-go@v6
-        with:
-          go-version-file: "go.mod"
-          cache: false # do our own caching
-
-      - name: Restore dependencies
-        uses: actions/cache/restore@v4
-        with:
-          path: ~/go/pkg/mod
-          key: go-${{ runner.os }}${{ runner.arch }}-${{ hashFiles('go.mod') }}-deps-${{ hashFiles('go.sum') }}
-
-      - name: Restore build outputs
-        uses: actions/cache/restore@v4
-        with:
-          path: ~/.cache/go-build
-          key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
-
-      - name: Run functional test ndc
-        timeout-minutes: 15
-        run: ./develop/github/monitor_test.sh make functional-test-ndc-coverage
-
-      - name: Print memory snapshot
-        if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
-
-      - name: Generate crash report
-        if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
-          [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
-            CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
-
-      - name: Upload code coverage to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./.testoutput
-          flags: functional-test-ndc
-
-      - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./.testoutput
-          flags: functional-test-ndc
-          report_type: test_results
-
-      - name: Upload test results to GitHub
-        # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
-        uses: actions/upload-artifact@v4.4.3
-        if: ${{ !cancelled() }}
-        with:
-          name: junit-xml--${{github.run_id}}--${{ steps.get_job_id.outputs.job_id }}--${{github.run_attempt}}--${{matrix.name}}--functional-test-ndc
+          name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.name}}--functional-smoke
           path: ./.testoutput/junit.*.xml
           include-hidden-files: true
           retention-days: 28
-
-      # Ensure this doesn't contribute to the junit output.
-      - name: Flaky Functional NDC Test Detection
-        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 30
-        run: |
-          echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
-          make functional-test-ndc-coverage
-        env:
-          FAILED_TEST_RETRIES: "0" # not retrying failed tests intentionally here since we're trying to detect flakes
-          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
@@ -912,8 +743,7 @@ jobs:
       - unit-test
       - integration-test
       - functional-test
-      - functional-test-xdc
-      - functional-test-ndc
+      - functional-test-smoke
     runs-on: ubuntu-latest
     env:
       RESULTS: ${{ toJSON(needs.*.result) }}
@@ -921,8 +751,9 @@ jobs:
       - name: Check results
         run: |
           if [[ "${{ inputs.run_single_functional_test }}" != "true" ]]; then
-            # if in all-tests mode, all statuses must be success
-            if [[ -n $(echo "$RESULTS" | jq '.[] | select (. != "success")') ]]; then
+            # if in all-tests mode, all statuses must be success or skipped
+            # (smoke test jobs are skipped when running full database matrix)
+            if [[ -n $(echo "$RESULTS" | jq '.[] | select (. != "success" and . != "skipped")') ]]; then
               exit 1
             fi
           else
