--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -128,6 +128,32 @@ jobs:
       - name: check yaml formatting
         run: make lint-yaml
 
+  parallelize-tests:
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-go@v6
+        with:
+          go-version-file: "go.mod"
+          check-latest: true
+          cache: true
+
+      - name: check test parallelization
+        run: make parallelize-tests
+
+      - name: check-is-dirty
+        run: |
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "Detected uncommitted changes after running parallelize-tests."
+            echo "Run 'make parallelize-tests' locally and commit the changes."
+            git status
+            git diff
+            exit 1
+          fi
+
   golangci:
     runs-on: ubuntu-24.04-arm
     steps:
@@ -163,6 +189,7 @@ jobs:
       - fmt-imports
       - lint-yaml
       - golangci
+      - parallelize-tests
     runs-on: ubuntu-24.04-arm
     if: always()
     env:
