--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -86,7 +86,7 @@ jobs:
       - name: lint system workflows with workflowcheck
         run: make workflowcheck
 
-  fmt-imports:
+  fmt:
     runs-on: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v6
@@ -101,7 +101,7 @@ jobs:
 
       - name: format golang import statements
         run: |
-          make fmt-imports
+          make fmt
 
       - name: check-is-dirty
         run: |
@@ -111,22 +111,6 @@ jobs:
             git diff
             exit 1
           fi
-
-  lint-yaml:
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-go@v6
-        with:
-          go-version-file: "go.mod"
-          check-latest: true
-          cache: true
-
-      - name: check yaml formatting
-        run: make lint-yaml
 
   parallelize-tests:
     runs-on: ubuntu-24.04-arm
@@ -183,11 +167,10 @@ jobs:
   linters-succeed:
     name: All Linters Succeed
     needs:
+      - fmt
       - lint-api
       - lint-protos
       - lint-actions
-      - fmt-imports
-      - lint-yaml
       - golangci
       - parallelize-tests
     runs-on: ubuntu-24.04-arm
