--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -587,6 +587,62 @@ jobs:
           include-hidden-files: true
           retention-days: 28
 
+  mixed-brain-test:
+    name: Mixed brain test
+    needs: [pre-build, test-setup]
+    runs-on: ${{ needs.test-setup.outputs.runner_arm }}
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ env.COMMIT }}
+
+      - uses: actions/setup-go@v6
+        with:
+          go-version-file: "go.mod"
+          cache: false
+
+      - name: Restore dependencies
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/go/pkg/mod
+          key: go-${{ runner.os }}${{ runner.arch }}-${{ hashFiles('go.mod') }}-deps-${{ hashFiles('go.sum') }}
+
+      - name: Restore build outputs
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/.cache/go-build
+          key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
+
+      - name: Run mixed brain test
+        timeout-minutes: 20
+        run: ./develop/github/monitor_test.sh make mixed-brain-test
+        env:
+          TEST_TIMEOUT: 18m
+          MIXED_BRAIN_TEST_DURATION: 5m
+
+      - name: Print memory snapshot
+        if: always()
+        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
+
+      - name: Print current server logs
+        if: failure()
+        run: |
+          f=.testoutput/mixedbrain_process-current.log
+          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+
+      - name: Print release server logs
+        if: failure()
+        run: |
+          f=.testoutput/mixedbrain_process-release.log
+          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+
+      - name: Print omes logs
+        if: failure()
+        run: |
+          f=.testoutput/mixedbrain_omes.log
+          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+
   test-status:
     if: always()
     name: Test Status
@@ -595,6 +651,7 @@ jobs:
       - unit-test
       - integration-test
       - functional-test
+      - mixed-brain-test
     runs-on: ubuntu-latest
     env:
       RESULTS: ${{ toJSON(needs.*.result) }}
