--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -320,7 +320,7 @@ jobs:
 
       - name: Print memory snapshot
         if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
+        run: cat /tmp/memory_snapshot.txt || true
 
       - name: Generate crash report
         if: failure() # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
@@ -413,7 +413,7 @@ jobs:
 
       - name: Print memory snapshot
         if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
+        run: cat /tmp/memory_snapshot.txt || true
 
       - name: Generate crash report
         if: failure() # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
@@ -543,7 +543,7 @@ jobs:
 
       - name: Print memory snapshot
         if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
+        run: cat /tmp/memory_snapshot.txt || true
 
       - name: Generate crash report
         if: failure() # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
@@ -597,6 +597,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
+      - name: Start PostgreSQL
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
+          services: postgresql
+          down-flags: -v
+
       - uses: actions/setup-go@v6
         with:
           go-version-file: "go.mod"
@@ -614,34 +621,32 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
+      - name: Install PostgreSQL schema
+        run: make install-schema-postgresql12
+
       - name: Run mixed brain test
         timeout-minutes: 20
         run: ./develop/github/monitor_test.sh make mixed-brain-test
         env:
           TEST_TIMEOUT: 18m
           MIXED_BRAIN_TEST_DURATION: 5m
+          PERSISTENCE_DRIVER: postgres12
 
       - name: Print memory snapshot
         if: always()
-        run: if [ -f /tmp/memory_snapshot.txt ]; then cat /tmp/memory_snapshot.txt; fi
+        run: cat /tmp/memory_snapshot.txt || true
 
       - name: Print current server logs
         if: always()
-        run: |
-          f=.testoutput/mixedbrain_process-current.log
-          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+        run: cat .testoutput/mixedbrain_process-current.log || true
 
       - name: Print release server logs
         if: always()
-        run: |
-          f=.testoutput/mixedbrain_process-release.log
-          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+        run: cat .testoutput/mixedbrain_process-release.log || true
 
       - name: Print Omes logs
         if: always()
-        run: |
-          f=.testoutput/mixedbrain_omes.log
-          [ -f "$f" ] && echo "=== $f ===" && cat "$f"
+        run: cat .testoutput/mixedbrain_omes.log || true
 
   test-status:
     if: always()
